[package]
name = "jonsson-video"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.11", features = ["audio"] }
# this is copied from the macroquad Cargo.toml, we can add webp support manually this way
image = { version = "0.24", default-features = false, features = ["png", "tga", "webp"] }
