[package]
name = "jonsson-video"
version = "0.1.0"
edition = "2021"

[dependencies]
#macroquad = { version = "0.4.13", features = ["audio"] }

macroquad = { path = "/tmp/macroquad", features = ["audio"] }
image = { version = "0.25.5", features = [ "avif", "avif-native"] }
# this is copied from the macroquad Cargo.toml, we can add webp support manually this way
#image = { version = "0.25.5", default-features = false, features = ["png", "tga", "webp", "qoi", "avif", "avif-native"] }
#image = { version = "0.25.5", features = ["avif-native"] } #, default-features = false, features = ["png", "tga", "avif"] }

[package.metadata.android]
# Required Android package name - must be unique on Google Play
package_name = "com.your.jonsson_video"
# API level 31+ requires android:exported to be explicitly declared
version_code = 1
version_name = "1.0"
assets = "assets/"  # Put your video files and audio in this directory
build_targets = [
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android"
]

# Since you're using audio, you'll need these permissions
[[package.metadata.android.permission]]
name = "android.permission.RECORD_AUDIO"  # For audio playback

# For API level 31+ compatibility
[package.metadata.android.activity_attributes]
"android:exported" = "true"

# If you want to force landscape orientation (recommended for your video player)
"android:screenOrientation" = "userLandscape"

# Since your code loads video files and audio, you need to specify the assets directory
